Fix post views alignment

--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -114,7 +114,6 @@
       font-size: 1.2rem;
       font-weight: 700;
       color: $white;
-      margin-right: 0.5rem;
       user-select: none;
       cursor: initial;
 
